# lucet-spectre

./: .gitignore  .gitmodules  Cargo.toml  README.md
benchmarks/lucet-benchmarks/: Cargo.toml
benchmarks/lucet-benchmarks/src/: context.rs  lib.rs
benchmarks/shootout/: Makefile  baseline.toml  blade_sfi.toml  both_cet.toml  both_sfi.toml  cet.toml  cet_aslr.toml  cet_full.toml  cet_only.toml  cet_only_nocet.toml  expensive.toml  hostcalls.c  pht.toml  reference.toml  reference_unrolled.toml  sbxonly_cet.toml  sbxonly_sfi.toml  sfi_aslr.toml  sfi_full.toml  sightglass.toml  sightglass_sensitivity.toml  wrapper.c
lucet-concurrency-tests/: Cargo.toml
lucet-concurrency-tests/src/: lib.rs
lucet-module/: Cargo.toml
lucet-module/src/: module_data.rs
lucet-runtime/: Cargo.toml  build.rs
lucet-runtime/include/: lucet.h
lucet-runtime/lucet-runtime-internals/: Cargo.toml  build.rs
lucet-runtime/lucet-runtime-internals/src/: instance.rs  module.rs  vmctx.rs
lucet-runtime/lucet-runtime-macros/src/: lib.rs
lucet-runtime/lucet-runtime-tests/: build.rs
lucet-runtime/src/: c_api.rs  lib.rs
lucet-spectest/: Cargo.toml
lucet-spectest/src/: lib.rs  script.rs
lucet-unified/: Cargo.toml
lucet-unified/src/: lib.rs
lucet-wasi/: Cargo.toml  bindings.json
lucet-wasi/src/: lib.rs  main.rs  runtime.rs
lucetc/: Cargo.toml
lucetc/lucetc/: main.rs  options.rs
lucetc/src/: compiler.rs  decls.rs  lib.rs  module.rs  options.rs  output.rs  stack_probe.rs
lucetc/src/compiler/: cpu_features.rs
testing/: Makefile  check_alignments.py  test.cpp
(+8 files in other folders)
