[package]
name = "lucet-unified"
version = "0.1.0"
authors = ["shravanrn@gmail.com <shravanrn@gmail.com>"]
edition = "2018"

[dependencies]
lucet-wasi = { path = "../lucet-wasi" }
lucet-runtime = { path = "../lucet-runtime" }
lucet-runtime-internals = { path = "../lucet-runtime/lucet-runtime-internals" }
lucet-module = { path = "../lucet-module" }

[lib]
name = "lucet_unified"
crate-type = ["rlib", "staticlib", "dylib"]